# object-detection

./: pyproject.toml
app/: __main__.py
app/data/: VOCDataset.py
app/model/: CNNBlock.py  YoloLoss.py  architecture.py  yolo.py
app/utils/: bboxes.py  intersection_over_union.py  mean_average_precision.py  nms.py
