[tool.poetry]
name = "object-detection"
version = "0.1.0"
description = ""
authors = ["hammami-nada <nada.hammami@insat.ucar.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
pandas = "^2.2.2"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
